Add root endpoint with API documentation

--- a/.env.example
+++ b/.env.example
@@ -2,31 +2,32 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/ebay_helper"
 
 # Application
-NODE_ENV="development"
+NODE_ENV="production"
 PORT=3000
 
 # Authentication
 JWT_SECRET="your-secret-key-min-32-chars-recommended"
 BCRYPT_SALT_ROUNDS=10
 
-# eBay API Credentials
-EBAY_CLIENT_ID="your-ebay-app-id"
-EBAY_CLIENT_SECRET="your-ebay-cert-id"
-# RuName (Redirect URL Name) from eBay Developer portal - REQUIRED for OAuth
-EBAY_OAUTH_REDIRECT_URI="your-ebay-runame-or-http://localhost:3000/api/ebay/callback"
-EBAY_SANDBOX_MODE="true"
-# Where to redirect user after successful eBay OAuth (frontend URL)
-EBAY_CLIENT_POST_AUTH_REDIRECT="http://localhost:5173/saved-searches"
-# OAuth scopes (space-separated)
-EBAY_OAUTH_SCOPES="https://api.ebay.com/oauth/api_scope/shopping https://api.ebay.com/oauth/api_scope/sell.account.readonly"
+# eBay API Credentials (PRODUCTION)
+# Get these from eBay Developer Portal: https://developer.ebay.com/
+# WARNING: DO NOT use sandbox credentials (starting with SBX-) in production!
+EBAY_CLIENT_ID="your-production-client-id"
+EBAY_CLIENT_SECRET="your-production-client-secret"
+EBAY_OAUTH_REDIRECT_URI="your-production-redirect-uri-from-ebay"
+EBAY_SANDBOX_MODE="false"  # Set to "true" for sandbox, "false" for production
+
+# Frontend redirect after OAuth (update to your production domain)
+EBAY_CLIENT_POST_AUTH_REDIRECT="https://your-domain.com/saved-searches"
+
+# OAuth scopes (production scopes)
+EBAY_OAUTH_SCOPES="https://api.ebay.com/oauth/api_scope https://api.ebay.com/oauth/api_scope/sell.account.readonly"
 
 # eBay Account Deletion Notification Compliance (REQUIRED for production)
-# Verification token for validating eBay notifications (32-80 characters, alphanumeric/underscore/hyphen only)
-EBAY_NOTIFICATION_VERIFICATION_TOKEN="your-verification-token-min-32-chars-required"
-# Full endpoint URL where eBay will send account deletion notifications (MUST be HTTPS in production)
+# Generate a random 32-80 character token: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+EBAY_NOTIFICATION_VERIFICATION_TOKEN="your-generated-verification-token"
+# Must be HTTPS and publicly accessible
 EBAY_NOTIFICATION_ENDPOINT_URL="https://your-domain.com/api/ebay/account-deletion/notification"
 
 # eBay Service (optional - for background workers)
-EBAY_ACCESS_TOKEN="your-access-token"
-
-# Add other environment variables as needed
+EBAY_ACCESS_TOKEN="your-access-token-if-using-workers"
