--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": []
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "frontend", "frontend/**/*", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "frontend", "**/*.config.ts"]
 }
