Debug: Add --listFiles flag to see what TypeScript is compiling

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,13 +11,16 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
-    "declaration Map": true,
     "sourceMap": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "types": ["node"],
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "frontend", "**/*.test.ts", "**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "frontend", "**/*.test.ts"]
 }
