--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "prebuild": "npm --prefix frontend install && npm --prefix frontend run build",
-    "build": "tsc --project ./tsconfig.build.json --listFiles",
+    "build": "tsc --build tsconfig.build.json --force --verbose",
+    "postbuild": "echo Build complete",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
