--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "prebuild": "npm --prefix frontend install && npm --prefix frontend run build",
-    "build": "tsc --build tsconfig.build.json --force --verbose",
-    "postbuild": "echo Build complete",
+    "build:frontend": "npm --prefix frontend install && npm --prefix frontend run build",
+    "build:backend": "tsc -p tsconfig.build.json",
+    "build": "npm run build:frontend && npm run build:backend",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
