--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@types/xml2js": "^0.4.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "axios": "^1.13.5",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.69.2",
