--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build:frontend": "npm --prefix frontend install --include=dev && npm --prefix frontend run build",
+    "build:frontend": "cd frontend && npm install --include=dev && npm run build && cd ..",
     "build:backend": "tsc -p tsconfig.build.json",
-    "build": "npm run build:frontend && npm run build:backend",
+    "build": "npm run build:frontend && npm run build:backend && echo '✓ Build complete'",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
