Fix: Exclude .tsx files from backend TypeScript build

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -18,5 +18,5 @@
     "incremental": false
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["./frontend", "./frontend/**/*", "./node_modules", "./dist"]
+  "exclude": ["./src/**/*.tsx", "./frontend", "./frontend/**/*", "./node_modules", "./dist"]
 }
