Fix: Simplify frontend build to skip tsc -b, add jsx to tsconfig.node.json

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -5,6 +5,7 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "types": ["node"],
+    "jsx": "react-jsx",
     "skipLibCheck": true,
 
     /* Bundler mode */
