--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:frontend": "cd frontend && npm install --include=dev && npm run build && cd ..",
     "build:backend": "tsc -p tsconfig.build.json",
     "build": "npm run build:frontend && npm run build:backend && echo '✓ Build complete'",
+    "migrate": "node scripts/migrate.js",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
