--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ebay-helper
     runtime: node
     buildCommand: npm run build
-    startCommand: node dist/index.js
+    startCommand: npm run migrate && node dist/index.js
     envVars:
       - key: NODE_ENV
         value: production
