--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build:frontend": "cd frontend && npm install --include=dev && npm run build && cd ..",
-    "build:backend": "tsc -p tsconfig.build.json",
+    "build:backend": "prisma generate && tsc -p tsconfig.build.json",
     "build": "npm run build:frontend && npm run build:backend && echo '✓ Build complete'",
     "migrate": "node scripts/migrate.js",
     "start": "node dist/index.js",
